templates/ae_template.yaml
---
# Source: ae/templates/engine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-ae-engine
  labels:
    app.kubernetes.io/name: ae
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.1.5"
    app.kubernetes.io/component: "engine"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: ae-1.1.46
  annotations:
spec:
  type: "ClusterIP"
  ports:
    - port: 82
      targetPort: 8072
      protocol: TCP
      
      
      appProtocol: http
      
      
      name: engine
    - port: 5701
      name: engine-hz
      protocol: TCP
      
      
      appProtocol: http
      
      
  selector:
    app.kubernetes.io/name: ae
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: "engine"
---
# Source: ae/templates/engine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-ae-engine
  labels:
    app.kubernetes.io/name: ae
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.1.5"
    app.kubernetes.io/component: "engine"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: ae-1.1.46
spec:
  strategy: 
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: ae
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: "engine"
  template:
    metadata:
      annotations:
        chaos.alpha.kubernetes.io/enabled: "false"
        checksum/config: b050da2e59bb2496637587c7a4ccf04017467f22b82e21844b5e00359ff98f80
      labels:
        app.kubernetes.io/name: ae
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: "2.1.5"
        app.kubernetes.io/component: "engine"
    spec:
      serviceAccountName: release-name-ae
      
      affinity: 
        {}
      nodeSelector: 
        {}
      topologySpreadConstraints: 
        []
      tolerations: 
        []
      terminationGracePeriodSeconds: 30
      containers:
        - name: release-name-ae-engine
          image: "graviteeio/ae-engine:2.1.5"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8072
            - name: engine-techapi
              containerPort: 18072
          livenessProbe: 
            failureThreshold: 5
            periodSeconds: 10
            tcpSocket:
              port: http
          readinessProbe: 
            failureThreshold: 3
            periodSeconds: 5
            tcpSocket:
              port: http
          startupProbe: 
            failureThreshold: 20
            initialDelaySeconds: 30
            periodSeconds: 5
            tcpSocket:
              port: http
          resources: 
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: config
              mountPath: /opt/graviteeio-alert-engine/config/gravitee.yml
              subPath: gravitee.yml
            - name: config
              mountPath: /opt/graviteeio-alert-engine/config/hazelcast.xml
              subPath: hazelcast.xml
      volumes:
        - name: config
          configMap:
            name: release-name-ae-engine
---
# Source: ae/templates/engine-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-ae-engine
  labels:
    app.kubernetes.io/name: ae
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.1.5"
    app.kubernetes.io/component: "engine"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: ae-1.1.46
  annotations:
    
    kubernetes.io/app-root: "/"
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "ae.example.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: release-name-ae-engine
            port:
              number: 82
          
  tls:
    - hosts:
      - ae.example.com
      secretName: api-custom-cert
